[core] make commands with missing required parameters show usage