@@ -22,25 +22,30 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import net.kyori.adventure.audience.Audience;
 import net.kyori.adventure.identity.Identity;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.JoinConfiguration;
+import net.kyori.adventure.text.JoinConfiguration.Builder;
 import net.kyori.adventure.text.TextComponent;
 import net.kyori.adventure.text.event.ClickEvent;
 import net.kyori.adventure.text.event.HoverEvent;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.Style;
-import org.apache.logging.log4j.util.Strings;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.cubeengine.libcube.service.i18n.I18n;
 import org.cubeengine.libcube.service.i18n.formatter.MessageType;
 import org.spongepowered.api.command.Command;
+import org.spongepowered.api.command.Command.Parameterized;
 import org.spongepowered.api.command.CommandExecutor;
 import org.spongepowered.api.command.CommandResult;
+import org.spongepowered.api.command.exception.ArgumentParseException;
 import org.spongepowered.api.command.exception.CommandException;
 import org.spongepowered.api.command.parameter.CommandContext;
 import org.spongepowered.api.command.parameter.Parameter;
+import org.spongepowered.api.command.parameter.Parameter.Key;
 import org.spongepowered.api.command.parameter.Parameter.Subcommand;
+import org.spongepowered.api.command.parameter.Parameter.Value;
 import org.spongepowered.api.event.EventContextKeys;
 
 public class HelpExecutor implements CommandExecutor
@@ -56,6 +61,12 @@ public class HelpExecutor implements CommandExecutor
         this.i18n = i18n;
     }
 
+    public HelpExecutor(I18n i18n, CubeEngineCommand executor)
+    {
+        this.i18n = i18n;
+        this.executor = executor;
+    }
+
     @Override
     public CommandResult execute(CommandContext context) throws CommandException
     {
@@ -68,22 +79,15 @@ public class HelpExecutor implements CommandExecutor
         final Component descValue = target.shortDescription(context.cause()).get().color(NamedTextColor.GOLD);
         context.sendMessage(Identity.nil(), Component.empty().append(descLabel).append(Component.space()).append(descValue));
 
-        List<String> usages = new ArrayList<>();
-        for (Parameter param : target.parameters())
-        {
-            collectUsage(context, usages, param);
-        }
-
         final String actual = rawCommand.map(r -> r.endsWith("?") ? r.substring(0, r.length() - 1) : r).orElse("missing command context").trim();
-        final String usage = usages.isEmpty() && executor == null ? "<command>" : Strings.join(usages, ' ');
-        final String joinedUsage = actual + " " + usage;
 
-        i18n.send(audience, grayStyle, "Usage: {input}", joinedUsage);
+        final Component usage = usage(context, Collections.emptyList());
+        i18n.send(audience, grayStyle, "Usage: {input}", Component.text(actual).append(Component.space()).append(usage));
 
 //            context.sendMessage(target.getUsage(context.getCause()).style(grayStyle));
 //            context.sendMessage(Component.text(actual.orElse("no cmd?")));
 
-        final List<Parameter.Subcommand> subcommands = target.subcommands().stream().filter(sc -> !sc.aliases().iterator().next().equals("?")).collect(Collectors.toList());
+        final List<Parameter.Subcommand> subcommands = target.subcommands().stream().filter(sc -> !sc.aliases().iterator().next().equals("?")).toList();
         if (!subcommands.isEmpty())
         {
             context.sendMessage(Identity.nil(), Component.empty());
@@ -119,23 +123,56 @@ public class HelpExecutor implements CommandExecutor
         return CommandResult.success();
     }
 
-    private void collectUsage(CommandContext context, List<String> usages, Parameter param)
+    public Component usage(final CommandContext context, final List<Parameter.Key<?>> errors)
+    {
+        List<Component> usages = new ArrayList<>();
+        for (Parameter param : target.parameters())
+        {
+            collectUsage(context, usages, param, errors);
+        }
+
+        return usages.isEmpty() && executor == null ? Component.text("<command>") : Component.join(JoinConfiguration.separator(Component.space()), usages);
+    }
+
+    public void errorUsage(final CommandContext context, final List<Parameter.Key<?>> errors) throws CommandException
+    {
+        // TODO handle other errors
+        final var usage = this.usage(context, errors);
+
+        final String rawCmd = context.cause().context().get(EventContextKeys.COMMAND).orElse("???");
+        // TODO get base cmd when this is a command with parameters
+        final Component fullUsage = Component.text(rawCmd).append(Component.space()).append(usage).color(NamedTextColor.GOLD);
+        final Component append = Component.text("Too few arguments:").append(Component.newline()).append(fullUsage);
+        throw new ArgumentParseException(append, rawCmd, rawCmd.length() + 2);
+    }
+
+    private void collectUsage(CommandContext context, List<Component> usages, Parameter param, List<Key<?>> errors)
     {
         if (param instanceof Parameter.Value)
         {
-            String usage = ((Parameter.Value<?>)param).usage(context.cause());
+            final boolean hasError = errors.contains(((Value<?>)param).key());
+            var usage = Component.text(((Parameter.Value<?>)param).usage(context.cause()));
             if (!param.isOptional())
             {
-                usage = "<" + usage + ">";
+                if (hasError)
+                {
+                    usage = Component.text("<", NamedTextColor.RED)
+                                     .append(usage.color(NamedTextColor.GOLD))
+                                     .append(Component.text(">", NamedTextColor.RED));
+                }
+                else
+                {
+                    usage = Component.text("<").append(usage).append(Component.text(">"));
+                }
             }
             usages.add(usage);
         }
         else if (param instanceof Parameter.Multi)
         {
-            final List<String> childUsages = new ArrayList<>();
+            final List<Component> childUsages = new ArrayList<>();
             for (Parameter childParam : ((Parameter.Multi)param).childParameters())
             {
-                this.collectUsage(context, childUsages, childParam);
+                this.collectUsage(context, childUsages, childParam, errors);
             }
 
             // Fixing multiple named parameters usage:
@@ -145,68 +182,70 @@ public class HelpExecutor implements CommandExecutor
             // For this we can go through usages in reverse and remove all previous occurences of a named parameter
             final List<String> repeats = new ArrayList<>();
             Collections.reverse(childUsages);
-            for (String childUsage : childUsages)
+            for (Component childUsage : childUsages)
             {
+                String rawChildUsage = PlainTextComponentSerializer.plainText().serialize(childUsage);
                 for (String repeat : repeats)
                 {
                     String optRepeat = " [" + repeat + "]";
-                    if (childUsage.endsWith(optRepeat))
+                    if (rawChildUsage.endsWith(optRepeat))
                     {
-                        childUsage = childUsage.substring(0, childUsage.indexOf(optRepeat));
+                        rawChildUsage = rawChildUsage.substring(0, rawChildUsage.indexOf(optRepeat));
                     }
                 }
-                repeats.add(childUsage);
+                repeats.add(rawChildUsage);
             }
             Collections.reverse(repeats);
             childUsages.clear();
-            childUsages.addAll(repeats);
+            childUsages.addAll(repeats.stream().map(Component::text).toList());
 
             // TODO different usage for sequence/firstof
+            final Builder joinCfgBuilder = JoinConfiguration.builder();
+
             if (param.getClass().getName().contains("FirstOf"))
             {
-                if (param.isOptional())
-                {
-                    usages.add("[" + String.join(" | ", childUsages) + "]");
-                }
-                else
-                {
-                    usages.add("<" + String.join(" | ", childUsages) + ">");
-                }
+                joinCfgBuilder.separator(Component.text(" | "));
             }
             else
             {
-                if (param.isOptional())
-                {
-                    usages.add("[" + String.join(" ", childUsages) + "]");
-                }
-                else
-                {
-                    usages.add("<" + String.join(" ", childUsages) + ">");
-                }
+                joinCfgBuilder.separator(Component.text(" "));
             }
-
+            if (param.isOptional())
+            {
+                joinCfgBuilder.prefix(Component.text("["));
+                joinCfgBuilder.suffix(Component.text("]"));
+            }
+            else
+            {
+                joinCfgBuilder.prefix(Component.text("<"));
+                joinCfgBuilder.suffix(Component.text(">"));
+            }
+            usages.add(Component.join(joinCfgBuilder.build(), childUsages));
         }
         else if (param instanceof Subcommand)
         {
             final Set<String> aliases = ((Subcommand)param).aliases();
-            final ArrayList<String> subUsage = new ArrayList<>();
+            final ArrayList<Component> subUsage = new ArrayList<>();
             for (Parameter subCmdParam : ((Subcommand)param).command().parameters())
             {
-                this.collectUsage(context, subUsage, subCmdParam);
+                this.collectUsage(context, subUsage, subCmdParam, errors);
             }
-            usages.add(String.join("|", aliases) + " " + String.join(" ", subUsage));
+
+            final var alias = Component.join(JoinConfiguration.separator(Component.text("|", NamedTextColor.GRAY)),
+                                                      aliases.stream().map(Component::text).toList());
+
+            usages.add(alias.append(Component.space()).append(Component.join(JoinConfiguration.separator(Component.space()), subUsage)));
 
         }
         else
         {
-            usages.add("param(" + param.getClass().getSimpleName() + ")");
+            usages.add(Component.text("param(" + param.getClass().getSimpleName() + ")"));
         }
     }
 
-    public void init(Command.Parameterized target, CubeEngineCommand executor, String perm)
+    public void init(Parameterized target, String perm)
     {
         this.target = target;
-        this.executor = executor;
         this.perm = perm;
     }
 }
